[project]
name = "arca230"
version = "0.0.1"
dependencies = [
    "matplotlib>=3.5.2",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scipy>=1.7.3",
    "astropy>=5.2.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 120